# tickerCollector

./: Dockerfile  LICENSE  README.md  collector.py  pyproject.toml
ticker_collector/: ohlc.py
